Set up a basic frontend that checks some input and reacts to the output

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "app"
 version = "0.1.0"
-description = ""
-authors = ["Thijs Penning <t.j.penning@student.tudelft.nl>"]
+description = "An AI powered URL phising detection app."
+authors = ["Rodin Haker <R.Haker@student.tudelft.nl>", "Arjan Hasami <A.Hasami@student.tudelft.nl>",
+    "Nada Mouman <N.Mouman@student.tudelft.nl>", "Thijs Penning <T.J.Penning@student.tudelft.nl>"]
+license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
