--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "app"
-version = "0.0.3"
+version = "0.0.4"
 description = "An AI powered URL phising detection app."
 authors = ["Rodin Haker <R.Haker@student.tudelft.nl>", "Arjan Hasami <A.Hasami@student.tudelft.nl>",
     "Nada Mouman <N.Mouman@student.tudelft.nl>", "Thijs Penning <T.J.Penning@student.tudelft.nl>"]
@@ -10,8 +10,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.6"
-setuptools = "^69.5.1"
 lib-version-remla24-team02 = "^0.0.2"
+python-decouple = "^3.8"
+requests = "^2.31.0"
+setuptools = "^69.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.1.0"
