--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,12 @@ jobs:
         run: |
           echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build and Push Docker Image
-        run: |
-          IMG=ghcr.io/${{ github.repository }}
-          docker build --tag $IMG:latest .
-          docker push --all-tags $IMG
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            IMG=ghcr.io/${{ github.repository }}
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}:latest
