--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,15 @@ jobs:
       - name: Registry Login (ghcr.io)
         run: |
           echo "${{ github.token }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_API_KEY: ${{ secrets.API_KEY }}
+          envkey_DEBUG: True
+          envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          ALLOWED_HOSTS: .localhost, 127.0.0.1, 0.0.0.0
+          file_name: .env
+          fail_on_empty: true
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
