--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 permissions: write-all
 on:
   push:
-    tags: ["v[0-9]+\.[0-9]+\.[0-9]+(-.*)?"]
+    tags: ["v*"]
 jobs:
   build:
     runs-on: ubuntu-22.04
